feat: "Correciones PR2"